--- a/login.html
+++ b/login.html
@@ -53,6 +53,10 @@
                 </div>
                 <div class="input-container">
                     <ion-icon name="person-outline" class="input-icon"></ion-icon>
+                    <input id="middlename" type="text" placeholder="Enter your Middle Name" required>
+                </div>
+                <div class="input-container">
+                    <ion-icon name="person-outline" class="input-icon"></ion-icon>
                     <input id="lastname" type="text" placeholder="Enter your Last Name" required>
                 </div>
                 <div class="input-container">
@@ -90,7 +94,7 @@
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h2> Hi Friend! Manage your Tasks </h2>
-                    <p>Register with your personal details to use all of site features</p>
+                    <p>Register with your personal details to use all of our site features</p>
                     <button class="hidden" id="register">Sign Up</button>
                 </div>
             </div>
