--- a/index.html
+++ b/index.html
@@ -229,11 +229,40 @@
                     <div class="cancelBtnArea"><button id="confirmDeleteBtn">Confirm</button></div>
                 </div>
                 <div id="click-to-popup-task-data">
-                    <div class = "hidePopupBtn"><ion-icon name="close-outline"></ion-icon></div>
-                    <p>Click to view more details about this task?</p>
-                    <div class = 'btns'>
-                        <button>View More</button>
-                    </div>
+                    <form id="task-data">
+                        <div id="hidePopupBtn"><ion-icon name="close-outline"></ion-icon></div>
+                        <div class="form-group">
+                            <label for="task-name">Task ID:</label>
+                            <input type="text" id="task-Id" name="task-Id" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-name">Task Name:</label>
+                            <input type="text" id="task-name" name="task-name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-description">Task Description:</label>
+                            <textarea id="task-description" name="task-description" rows="4" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-name">Start Time:</label>
+                            <input type="text" id="task-start-time" name="task-start-time" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-name">Due Time:</label>
+                            <input type="text" id="task-due-time" name="task-due-time" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-name">Priority:</label>
+                            <input type="text" id="task-priority" name="task-priority" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="task-name">Status:</label>
+                            <input type="text" id="task-status" name="task-status" required>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit">Click to complete or end this task</button>
+                        </div>
+                    </form>
                 </div> 
                 <!-- Toast message container -->
                 <div class="toast-test" id="toastMessage"></div> 
@@ -337,42 +366,6 @@
                     </div>
                     <div class="form-group">
                         <button type="submit">Save Changes</button>
-                    </div>
-                </form>
-              </div>
-              <div class="tasks-display-container">
-                <form id="task-data">
-                    <div id="closeBtn"><ion-icon name="close-outline"></ion-icon></div>
-                    <div class="form-group">
-                        <label for="task-name">Task ID:</label>
-                        <input type="text" id="task-Id" name="task-Id" required>
-                      </div>
-                    <div class="form-group">
-                        <label for="task-name">Task Name:</label>
-                        <input type="text" id="task-name" name="task-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="task-description">Task Description:</label>
-                        <textarea id="task-description" name="task-description" rows="4" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="task-name">Start Time:</label>
-                        <input type="text" id="task-start-time" name="task-start-time" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="task-name">Due Time:</label>
-                        <input type="text" id="task-due-time" name="task-due-time" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="task-name">Priority:</label>
-                        <input type="text" id="task-start-time" name="task-start-time" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="task-name">Status:</label>
-                        <input type="text" id="task-due-time" name="task-due-time" required>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit">Click to complete this task</button>
                     </div>
                 </form>
               </div>
